{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 61,
  "lineage": "2bbb94cf-517c-a80b-6569-46e6578bddf0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "sharing-svcs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "pending-acceptance",
            "auto_accept": false,
            "id": "pcx-000197e73273f78f2",
            "peer_owner_id": "332258952501",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-0da048706608ba401",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Side": "Requester"
            },
            "tags_all": {
              "Side": "Requester"
            },
            "vpc_id": "vpc-09d729a27d42ad613"
          },
          "dependencies": [
            "module.aws-vpc-app.aws_vpc.this",
            "module.aws-vpc-shared-svcs.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-000197e73273f78f2",
            "peer_owner_id": "332258952501",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-0da048706608ba401",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Side": "Accepter"
            },
            "tags_all": {
              "Side": "Accepter"
            },
            "vpc_id": "vpc-09d729a27d42ad613",
            "vpc_peering_connection_id": "pcx-000197e73273f78f2"
          },
          "dependencies": [
            "aws_vpc_peering_connection.sharing-svcs",
            "module.aws-vpc-app.aws_vpc.this",
            "module.aws-vpc-shared-svcs.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "app-to-shared",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/37bc21fd-d0f5-46a3-8802-d5136be12b7e/resourceGroups/instruqt-vfej/providers/Microsoft.Network/virtualNetworks/app-vnet/virtualNetworkPeerings/AppToShared",
            "name": "AppToShared",
            "remote_virtual_network_id": "/subscriptions/37bc21fd-d0f5-46a3-8802-d5136be12b7e/resourceGroups/instruqt-vfej/providers/Microsoft.Network/virtualNetworks/shared-svcs-vnet",
            "resource_group_name": "instruqt-vfej",
            "use_remote_gateways": false,
            "virtual_network_name": "app-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.instruqt",
            "module.azure-shared-svcs-network.azurerm_virtual_network.vnet",
            "module.azure-shared-svcs-network.data.azurerm_resource_group.network",
            "random_string.env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "shared-to-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/37bc21fd-d0f5-46a3-8802-d5136be12b7e/resourceGroups/instruqt-vfej/providers/Microsoft.Network/virtualNetworks/shared-svcs-vnet/virtualNetworkPeerings/SharedToApp",
            "name": "SharedToApp",
            "remote_virtual_network_id": "/subscriptions/37bc21fd-d0f5-46a3-8802-d5136be12b7e/resourceGroups/instruqt-vfej/providers/Microsoft.Network/virtualNetworks/app-vnet",
            "resource_group_name": "instruqt-vfej",
            "use_remote_gateways": false,
            "virtual_network_name": "shared-svcs-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.instruqt",
            "module.azure-app-network.azurerm_virtual_network.vnet",
            "module.azure-app-network.data.azurerm_resource_group.network",
            "random_string.env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "shared-consul",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8300",
                  "8301",
                  "9301",
                  "8302",
                  "8502",
                  "8443",
                  "20000",
                  "30851"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "8301",
                  "8302",
                  "9301"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-04-13T05:28:46.480-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/p-vog23x9oea5u-0/global/firewalls/shared-allow-consul",
            "log_config": [],
            "name": "shared-allow-consul",
            "network": "https://www.googleapis.com/compute/v1/projects/p-vog23x9oea5u-0/global/networks/vpc-shared-svcs",
            "priority": 1000,
            "project": "p-vog23x9oea5u-0",
            "self_link": "https://www.googleapis.com/compute/v1/projects/p-vog23x9oea5u-0/global/firewalls/shared-allow-consul",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "dependencies": [
            "module.gcp-vpc-shared-svcs.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc-app",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-083d0f6464aa65f31",
            "domain": "vpc",
            "id": "eipalloc-083d0f6464aa65f31",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-4-3-233.compute-1.amazonaws.com",
            "public_ip": "52.4.3.233",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "terraform-vpc-app-us-east-1a"
            },
            "tags_all": {
              "Name": "terraform-vpc-app-us-east-1a"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.aws-vpc-app",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:332258952501:internet-gateway/igw-0503502e3132d0a72",
            "id": "igw-0503502e3132d0a72",
            "owner_id": "332258952501",
            "tags": {
              "Name": "terraform-vpc-app"
            },
            "tags_all": {
              "Name": "terraform-vpc-app"
            },
            "vpc_id": "vpc-0da048706608ba401"
          },
          "dependencies": [
            "module.aws-vpc-app.aws_vpc.this",
            "module.aws-vpc-app.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc-app",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-083d0f6464aa65f31",
            "connectivity_type": "public",
            "id": "nat-0aad773cd7c5fa44c",
            "network_interface_id": "eni-0d43da8032979256d",
            "private_ip": "10.2.3.166",
            "public_ip": "52.4.3.233",
            "subnet_id": "subnet-08c7f9c084499d8fc",
            "tags": {
              "Name": "terraform-vpc-app-us-east-1a"
            },
            "tags_all": {
              "Name": "terraform-vpc-app-us-east-1a"
            }
          },
          "dependencies": [
            "module.aws-vpc-app.aws_eip.nat",
            "module.aws-vpc-app.aws_internet_gateway.this",
            "module.aws-vpc-app.aws_subnet.public",
            "module.aws-vpc-app.aws_vpc.this",
            "module.aws-vpc-app.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc-app",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b6a083c4cb72fbec1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0aad773cd7c5fa44c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b6a083c4cb72fbec",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.aws-vpc-app.aws_eip.nat",
            "module.aws-vpc-app.aws_internet_gateway.this",
            "module.aws-vpc-app.aws_nat_gateway.this",
            "module.aws-vpc-app.aws_route_table.private",
            "module.aws-vpc-app.aws_subnet.public",
            "module.aws-vpc-app.aws_vpc.this",
            "module.aws-vpc-app.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc-app",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0503502e3132d0a72",
            "id": "r-rtb-048129ee1ef7a506a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-048129ee1ef7a506a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.aws-vpc-app.aws_internet_gateway.this",
            "module.aws-vpc-app.aws_route_table.public",
            "module.aws-vpc-app.aws_vpc.this",
            "module.aws-vpc-app.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc-app",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:332258952501:route-table/rtb-0b6a083c4cb72fbec",
            "id": "rtb-0b6a083c4cb72fbec",
            "owner_id": "332258952501",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "terraform-vpc-app-private"
            },
            "tags_all": {
              "Name": "terraform-vpc-app-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0da048706608ba401"
          },
          "dependencies": [
            "module.aws-vpc-app.aws_vpc.this",
            "module.aws-vpc-app.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc-app",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:332258952501:route-table/rtb-048129ee1ef7a506a",
            "id": "rtb-048129ee1ef7a506a",
            "owner_id": "332258952501",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "terraform-vpc-app-public"
            },
            "tags_all": {
              "Name": "terraform-vpc-app-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0da048706608ba401"
          },
          "dependencies": [
            "module.aws-vpc-app.aws_vpc.this",
            "module.aws-vpc-app.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc-app",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bad624a9d7e79fdb",
            "route_table_id": "rtb-0b6a083c4cb72fbec",
            "subnet_id": "subnet-0a50e657a21991155"
          },
          "dependencies": [
            "module.aws-vpc-app.aws_route_table.private",
            "module.aws-vpc-app.aws_subnet.private",
            "module.aws-vpc-app.aws_vpc.this",
            "module.aws-vpc-app.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e09b2bbd56b2461",
            "route_table_id": "rtb-0b6a083c4cb72fbec",
            "subnet_id": "subnet-0d2733d12e151ddfe"
          },
          "dependencies": [
            "module.aws-vpc-app.aws_route_table.private",
            "module.aws-vpc-app.aws_subnet.private",
            "module.aws-vpc-app.aws_vpc.this",
            "module.aws-vpc-app.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0acfc6c8ee9aa8689",
            "route_table_id": "rtb-0b6a083c4cb72fbec",
            "subnet_id": "subnet-09d1d00dcb8509258"
          },
          "dependencies": [
            "module.aws-vpc-app.aws_route_table.private",
            "module.aws-vpc-app.aws_subnet.private",
            "module.aws-vpc-app.aws_vpc.this",
            "module.aws-vpc-app.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc-app",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c80a0040f19ef5bf",
            "route_table_id": "rtb-048129ee1ef7a506a",
            "subnet_id": "subnet-08c7f9c084499d8fc"
          },
          "dependencies": [
            "module.aws-vpc-app.aws_route_table.public",
            "module.aws-vpc-app.aws_subnet.public",
            "module.aws-vpc-app.aws_vpc.this",
            "module.aws-vpc-app.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c986300030773c1",
            "route_table_id": "rtb-048129ee1ef7a506a",
            "subnet_id": "subnet-0148423971533fc3d"
          },
          "dependencies": [
            "module.aws-vpc-app.aws_route_table.public",
            "module.aws-vpc-app.aws_subnet.public",
            "module.aws-vpc-app.aws_vpc.this",
            "module.aws-vpc-app.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03da17e17e2a76f93",
            "route_table_id": "rtb-048129ee1ef7a506a",
            "subnet_id": "subnet-0fb1e6c606bbbafd2"
          },
          "dependencies": [
            "module.aws-vpc-app.aws_route_table.public",
            "module.aws-vpc-app.aws_subnet.public",
            "module.aws-vpc-app.aws_vpc.this",
            "module.aws-vpc-app.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc-app",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:332258952501:subnet/subnet-0a50e657a21991155",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.2.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a50e657a21991155",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "332258952501",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-vpc-app-private-us-east-1a",
              "Tier": "private"
            },
            "tags_all": {
              "Name": "terraform-vpc-app-private-us-east-1a",
              "Tier": "private"
            },
            "vpc_id": "vpc-0da048706608ba401"
          },
          "dependencies": [
            "module.aws-vpc-app.aws_vpc.this",
            "module.aws-vpc-app.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:332258952501:subnet/subnet-0d2733d12e151ddfe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2733d12e151ddfe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "332258952501",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-vpc-app-private-us-east-1b",
              "Tier": "private"
            },
            "tags_all": {
              "Name": "terraform-vpc-app-private-us-east-1b",
              "Tier": "private"
            },
            "vpc_id": "vpc-0da048706608ba401"
          },
          "dependencies": [
            "module.aws-vpc-app.aws_vpc.this",
            "module.aws-vpc-app.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:332258952501:subnet/subnet-09d1d00dcb8509258",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.2.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09d1d00dcb8509258",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "332258952501",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-vpc-app-private-us-east-1c",
              "Tier": "private"
            },
            "tags_all": {
              "Name": "terraform-vpc-app-private-us-east-1c",
              "Tier": "private"
            },
            "vpc_id": "vpc-0da048706608ba401"
          },
          "dependencies": [
            "module.aws-vpc-app.aws_vpc.this",
            "module.aws-vpc-app.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc-app",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:332258952501:subnet/subnet-08c7f9c084499d8fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.2.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c7f9c084499d8fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "332258952501",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-vpc-app-public-us-east-1a",
              "Tier": "public",
              "kubernetes.io/cluster/app": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "terraform-vpc-app-public-us-east-1a",
              "Tier": "public",
              "kubernetes.io/cluster/app": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0da048706608ba401"
          },
          "dependencies": [
            "module.aws-vpc-app.aws_vpc.this",
            "module.aws-vpc-app.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:332258952501:subnet/subnet-0148423971533fc3d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.2.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0148423971533fc3d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "332258952501",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-vpc-app-public-us-east-1b",
              "Tier": "public",
              "kubernetes.io/cluster/app": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "terraform-vpc-app-public-us-east-1b",
              "Tier": "public",
              "kubernetes.io/cluster/app": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0da048706608ba401"
          },
          "dependencies": [
            "module.aws-vpc-app.aws_vpc.this",
            "module.aws-vpc-app.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:332258952501:subnet/subnet-0fb1e6c606bbbafd2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.2.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fb1e6c606bbbafd2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "332258952501",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-vpc-app-public-us-east-1c",
              "Tier": "public",
              "kubernetes.io/cluster/app": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "terraform-vpc-app-public-us-east-1c",
              "Tier": "public",
              "kubernetes.io/cluster/app": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0da048706608ba401"
          },
          "dependencies": [
            "module.aws-vpc-app.aws_vpc.this",
            "module.aws-vpc-app.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc-app",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:332258952501:vpc/vpc-0da048706608ba401",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-01d258fd67bc3387d",
            "default_route_table_id": "rtb-084130f02ab9ebe63",
            "default_security_group_id": "sg-076ccbfa71e150cae",
            "dhcp_options_id": "dopt-09354bd38766b4bc0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0da048706608ba401",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-084130f02ab9ebe63",
            "owner_id": "332258952501",
            "tags": {
              "Name": "terraform-vpc-app",
              "kubernetes.io/cluster/app": "shared"
            },
            "tags_all": {
              "Name": "terraform-vpc-app",
              "kubernetes.io/cluster/app": "shared"
            }
          }
        }
      ]
    },
    {
      "module": "module.aws-vpc-shared-svcs",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02c9b996341e7e80d",
            "domain": "vpc",
            "id": "eipalloc-02c9b996341e7e80d",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-44-152-146.compute-1.amazonaws.com",
            "public_ip": "52.44.152.146",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "terraform-vpc-shared-svcs-us-east-1a"
            },
            "tags_all": {
              "Name": "terraform-vpc-shared-svcs-us-east-1a"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.aws-vpc-shared-svcs",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:332258952501:internet-gateway/igw-095b28ec1fc3afa69",
            "id": "igw-095b28ec1fc3afa69",
            "owner_id": "332258952501",
            "tags": {
              "Name": "terraform-vpc-shared-svcs"
            },
            "tags_all": {
              "Name": "terraform-vpc-shared-svcs"
            },
            "vpc_id": "vpc-09d729a27d42ad613"
          },
          "dependencies": [
            "module.aws-vpc-shared-svcs.aws_vpc.this",
            "module.aws-vpc-shared-svcs.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc-shared-svcs",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02c9b996341e7e80d",
            "connectivity_type": "public",
            "id": "nat-02689f9590d985ce0",
            "network_interface_id": "eni-0845bace8f27f92b8",
            "private_ip": "10.1.3.188",
            "public_ip": "52.44.152.146",
            "subnet_id": "subnet-00e0abdeeb6e3dfc1",
            "tags": {
              "Name": "terraform-vpc-shared-svcs-us-east-1a"
            },
            "tags_all": {
              "Name": "terraform-vpc-shared-svcs-us-east-1a"
            }
          },
          "dependencies": [
            "module.aws-vpc-shared-svcs.aws_eip.nat",
            "module.aws-vpc-shared-svcs.aws_internet_gateway.this",
            "module.aws-vpc-shared-svcs.aws_subnet.public",
            "module.aws-vpc-shared-svcs.aws_vpc.this",
            "module.aws-vpc-shared-svcs.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc-shared-svcs",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02b7a14410d184f9b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02689f9590d985ce0",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02b7a14410d184f9b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.aws-vpc-shared-svcs.aws_eip.nat",
            "module.aws-vpc-shared-svcs.aws_internet_gateway.this",
            "module.aws-vpc-shared-svcs.aws_nat_gateway.this",
            "module.aws-vpc-shared-svcs.aws_route_table.private",
            "module.aws-vpc-shared-svcs.aws_subnet.public",
            "module.aws-vpc-shared-svcs.aws_vpc.this",
            "module.aws-vpc-shared-svcs.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc-shared-svcs",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-095b28ec1fc3afa69",
            "id": "r-rtb-0325ab7bbd2a0d1ea1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0325ab7bbd2a0d1ea",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.aws-vpc-shared-svcs.aws_internet_gateway.this",
            "module.aws-vpc-shared-svcs.aws_route_table.public",
            "module.aws-vpc-shared-svcs.aws_vpc.this",
            "module.aws-vpc-shared-svcs.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc-shared-svcs",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:332258952501:route-table/rtb-02b7a14410d184f9b",
            "id": "rtb-02b7a14410d184f9b",
            "owner_id": "332258952501",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "terraform-vpc-shared-svcs-private"
            },
            "tags_all": {
              "Name": "terraform-vpc-shared-svcs-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d729a27d42ad613"
          },
          "dependencies": [
            "module.aws-vpc-shared-svcs.aws_vpc.this",
            "module.aws-vpc-shared-svcs.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc-shared-svcs",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:332258952501:route-table/rtb-0325ab7bbd2a0d1ea",
            "id": "rtb-0325ab7bbd2a0d1ea",
            "owner_id": "332258952501",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "terraform-vpc-shared-svcs-public"
            },
            "tags_all": {
              "Name": "terraform-vpc-shared-svcs-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d729a27d42ad613"
          },
          "dependencies": [
            "module.aws-vpc-shared-svcs.aws_vpc.this",
            "module.aws-vpc-shared-svcs.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc-shared-svcs",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-076020f8e492c3d25",
            "route_table_id": "rtb-02b7a14410d184f9b",
            "subnet_id": "subnet-0f28b3e2ffeb6c850"
          },
          "dependencies": [
            "module.aws-vpc-shared-svcs.aws_route_table.private",
            "module.aws-vpc-shared-svcs.aws_subnet.private",
            "module.aws-vpc-shared-svcs.aws_vpc.this",
            "module.aws-vpc-shared-svcs.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b1b7ed0ddce81132",
            "route_table_id": "rtb-02b7a14410d184f9b",
            "subnet_id": "subnet-02954e54ad1f182d6"
          },
          "dependencies": [
            "module.aws-vpc-shared-svcs.aws_route_table.private",
            "module.aws-vpc-shared-svcs.aws_subnet.private",
            "module.aws-vpc-shared-svcs.aws_vpc.this",
            "module.aws-vpc-shared-svcs.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0544705df6435bb00",
            "route_table_id": "rtb-02b7a14410d184f9b",
            "subnet_id": "subnet-04a046c94626becbd"
          },
          "dependencies": [
            "module.aws-vpc-shared-svcs.aws_route_table.private",
            "module.aws-vpc-shared-svcs.aws_subnet.private",
            "module.aws-vpc-shared-svcs.aws_vpc.this",
            "module.aws-vpc-shared-svcs.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc-shared-svcs",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036269a469e127242",
            "route_table_id": "rtb-0325ab7bbd2a0d1ea",
            "subnet_id": "subnet-00e0abdeeb6e3dfc1"
          },
          "dependencies": [
            "module.aws-vpc-shared-svcs.aws_route_table.public",
            "module.aws-vpc-shared-svcs.aws_subnet.public",
            "module.aws-vpc-shared-svcs.aws_vpc.this",
            "module.aws-vpc-shared-svcs.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c46ccd3a51a2605f",
            "route_table_id": "rtb-0325ab7bbd2a0d1ea",
            "subnet_id": "subnet-04d2924304f7e501c"
          },
          "dependencies": [
            "module.aws-vpc-shared-svcs.aws_route_table.public",
            "module.aws-vpc-shared-svcs.aws_subnet.public",
            "module.aws-vpc-shared-svcs.aws_vpc.this",
            "module.aws-vpc-shared-svcs.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a0826486eb03f0f",
            "route_table_id": "rtb-0325ab7bbd2a0d1ea",
            "subnet_id": "subnet-0218dec6dd57ff1a8"
          },
          "dependencies": [
            "module.aws-vpc-shared-svcs.aws_route_table.public",
            "module.aws-vpc-shared-svcs.aws_subnet.public",
            "module.aws-vpc-shared-svcs.aws_vpc.this",
            "module.aws-vpc-shared-svcs.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc-shared-svcs",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:332258952501:subnet/subnet-0f28b3e2ffeb6c850",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f28b3e2ffeb6c850",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "332258952501",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-vpc-shared-svcs-private-us-east-1a",
              "Tier": "private"
            },
            "tags_all": {
              "Name": "terraform-vpc-shared-svcs-private-us-east-1a",
              "Tier": "private"
            },
            "vpc_id": "vpc-09d729a27d42ad613"
          },
          "dependencies": [
            "module.aws-vpc-shared-svcs.aws_vpc.this",
            "module.aws-vpc-shared-svcs.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:332258952501:subnet/subnet-02954e54ad1f182d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02954e54ad1f182d6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "332258952501",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-vpc-shared-svcs-private-us-east-1b",
              "Tier": "private"
            },
            "tags_all": {
              "Name": "terraform-vpc-shared-svcs-private-us-east-1b",
              "Tier": "private"
            },
            "vpc_id": "vpc-09d729a27d42ad613"
          },
          "dependencies": [
            "module.aws-vpc-shared-svcs.aws_vpc.this",
            "module.aws-vpc-shared-svcs.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:332258952501:subnet/subnet-04a046c94626becbd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a046c94626becbd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "332258952501",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-vpc-shared-svcs-private-us-east-1c",
              "Tier": "private"
            },
            "tags_all": {
              "Name": "terraform-vpc-shared-svcs-private-us-east-1c",
              "Tier": "private"
            },
            "vpc_id": "vpc-09d729a27d42ad613"
          },
          "dependencies": [
            "module.aws-vpc-shared-svcs.aws_vpc.this",
            "module.aws-vpc-shared-svcs.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc-shared-svcs",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:332258952501:subnet/subnet-00e0abdeeb6e3dfc1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e0abdeeb6e3dfc1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "332258952501",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-vpc-shared-svcs-public-us-east-1a",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "terraform-vpc-shared-svcs-public-us-east-1a",
              "Tier": "public"
            },
            "vpc_id": "vpc-09d729a27d42ad613"
          },
          "dependencies": [
            "module.aws-vpc-shared-svcs.aws_vpc.this",
            "module.aws-vpc-shared-svcs.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:332258952501:subnet/subnet-04d2924304f7e501c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d2924304f7e501c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "332258952501",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-vpc-shared-svcs-public-us-east-1b",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "terraform-vpc-shared-svcs-public-us-east-1b",
              "Tier": "public"
            },
            "vpc_id": "vpc-09d729a27d42ad613"
          },
          "dependencies": [
            "module.aws-vpc-shared-svcs.aws_vpc.this",
            "module.aws-vpc-shared-svcs.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:332258952501:subnet/subnet-0218dec6dd57ff1a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0218dec6dd57ff1a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "332258952501",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-vpc-shared-svcs-public-us-east-1c",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "terraform-vpc-shared-svcs-public-us-east-1c",
              "Tier": "public"
            },
            "vpc_id": "vpc-09d729a27d42ad613"
          },
          "dependencies": [
            "module.aws-vpc-shared-svcs.aws_vpc.this",
            "module.aws-vpc-shared-svcs.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc-shared-svcs",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:332258952501:vpc/vpc-09d729a27d42ad613",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-095323259a5413ff6",
            "default_route_table_id": "rtb-0a27b7ce851df84a3",
            "default_security_group_id": "sg-02740b5da976c059e",
            "dhcp_options_id": "dopt-09354bd38766b4bc0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09d729a27d42ad613",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a27b7ce851df84a3",
            "owner_id": "332258952501",
            "tags": {
              "Name": "terraform-vpc-shared-svcs"
            },
            "tags_all": {
              "Name": "terraform-vpc-shared-svcs"
            }
          }
        }
      ]
    },
    {
      "module": "module.azure-app-network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.2.0.0/24",
            "address_prefixes": [
              "10.2.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/37bc21fd-d0f5-46a3-8802-d5136be12b7e/resourceGroups/instruqt-vfej/providers/Microsoft.Network/virtualNetworks/app-vnet/subnets/app",
            "name": "app",
            "resource_group_name": "instruqt-vfej",
            "virtual_network_name": "app-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.instruqt",
            "module.azure-app-network.azurerm_virtual_network.vnet",
            "module.azure-app-network.data.azurerm_resource_group.network",
            "random_string.env"
          ]
        }
      ]
    },
    {
      "module": "module.azure-app-network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.2.0.0/16"
            ],
            "guid": "03b001b5-8997-487e-90aa-78a4251858c7",
            "id": "/subscriptions/37bc21fd-d0f5-46a3-8802-d5136be12b7e/resourceGroups/instruqt-vfej/providers/Microsoft.Network/virtualNetworks/app-vnet",
            "location": "southcentralus",
            "name": "app-vnet",
            "resource_group_name": "instruqt-vfej",
            "tags": {
              "owner": "instruqt@hashicorp.com"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.instruqt",
            "module.azure-app-network.data.azurerm_resource_group.network",
            "random_string.env"
          ]
        }
      ]
    },
    {
      "module": "module.azure-shared-svcs-network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.0.0/24",
            "address_prefixes": [
              "10.1.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/37bc21fd-d0f5-46a3-8802-d5136be12b7e/resourceGroups/instruqt-vfej/providers/Microsoft.Network/virtualNetworks/shared-svcs-vnet/subnets/shared",
            "name": "shared",
            "resource_group_name": "instruqt-vfej",
            "virtual_network_name": "shared-svcs-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.instruqt",
            "module.azure-shared-svcs-network.azurerm_virtual_network.vnet",
            "module.azure-shared-svcs-network.data.azurerm_resource_group.network",
            "random_string.env"
          ]
        }
      ]
    },
    {
      "module": "module.azure-shared-svcs-network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "guid": "7e8bce67-4daa-4787-bdd7-5c53f220ed40",
            "id": "/subscriptions/37bc21fd-d0f5-46a3-8802-d5136be12b7e/resourceGroups/instruqt-vfej/providers/Microsoft.Network/virtualNetworks/shared-svcs-vnet",
            "location": "southcentralus",
            "name": "shared-svcs-vnet",
            "resource_group_name": "instruqt-vfej",
            "tags": {
              "owner": "instruqt@hashicorp.com"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.instruqt",
            "module.azure-shared-svcs-network.data.azurerm_resource_group.network",
            "random_string.env"
          ]
        }
      ]
    },
    {
      "module": "module.gcp-vpc-app.module.subnets",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "us-central1/app",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-04-13T05:28:50.236-07:00",
            "gateway_address": "10.2.0.1",
            "id": "projects/p-vog23x9oea5u-0/regions/us-central1/subnetworks/app",
            "ip_cidr_range": "10.2.0.0/24",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_SEC",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "app",
            "network": "https://www.googleapis.com/compute/v1/projects/p-vog23x9oea5u-0/global/networks/vpc-app",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "p-vog23x9oea5u-0",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/p-vog23x9oea5u-0/regions/us-central1/subnetworks/app",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.gcp-vpc-app.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.gcp-vpc-app.module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/p-vog23x9oea5u-0/global/networks/vpc-app",
            "mtu": 0,
            "name": "vpc-app",
            "project": "p-vog23x9oea5u-0",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/p-vog23x9oea5u-0/global/networks/vpc-app"
          }
        }
      ]
    },
    {
      "module": "module.gcp-vpc-shared-svcs.module.subnets",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "us-central1/shared",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-04-13T05:28:49.629-07:00",
            "gateway_address": "10.1.0.1",
            "id": "projects/p-vog23x9oea5u-0/regions/us-central1/subnetworks/shared",
            "ip_cidr_range": "10.1.0.0/24",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_SEC",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "shared",
            "network": "https://www.googleapis.com/compute/v1/projects/p-vog23x9oea5u-0/global/networks/vpc-shared-svcs",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "p-vog23x9oea5u-0",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/p-vog23x9oea5u-0/regions/us-central1/subnetworks/shared",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.gcp-vpc-shared-svcs.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.gcp-vpc-shared-svcs.module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/p-vog23x9oea5u-0/global/networks/vpc-shared-svcs",
            "mtu": 0,
            "name": "vpc-shared-svcs",
            "project": "p-vog23x9oea5u-0",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/p-vog23x9oea5u-0/global/networks/vpc-shared-svcs"
          }
        }
      ]
    }
  ]
}